# side-project

./: config.py  prueba.py  pyproject.toml
src/api/: api.py  middleware.py  result_handler.py  routes.py
src/api/routes/: match.py  routes.py  users.py
src/api/static/: styles.css
src/api/templates/: result.html  temp.html
src/core/: exceptions.py  service.py
src/database/: psql.py
test/integration/: test_get_matches.py
test/unit/: test_service.py
